# other-programs

./: .gitignore  LICENSE  Optimizations.bat  README.md  directory_filter.py  directory_indexer.py  execution_time_tester.py  pdf_and_image_tool.pyw  pdf_and_image_tools.pyw  pyproject.toml  requirements.txt  web_content_downloader.py
GUI-Applications/: directory_filter.pyw  pdf_and_image_tool.pyw  pdf_and_image_tools.pyw
GUI-Applications/web_content_downloader/: web_content_downloader.py
GUI-Applications/window_manager/: window_manager.pyw
content-tools/: directory_filter.pyw  pdf_and_image_tools.pyw
content-tools/web_content_downloader/: web_content_downloader.py
directory-filter/: main.pyw
pdf-and-image-tools/: core.py  gui.py  main.pyw
pdf-and-image-tools/tests/: generate_test_assets.py  test_ocr.py
pdf_and_image_tools/: core.py
shell-scripts/: GenerateReports.ps1  README.md  ReportGenerator.ps1
shortcuts/: pdf_and_image_tools.vbs  run-pdf-and-image-tools.command  run-pdf-and-image-tools.vbs  run-web-content-downloader.command  run-web-content-downloader.vbs  run_pdf_and_image_tools.vbs  run_web_content_downloader.vbs
web-content-downloader/: main.py
web_content_downloader/: main.py
window-manager/: main.pyw
window_manager/: window_manager.pyw
