[project]
name = "other-programs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cairosvg>=2.8.2",
    "cryptography>=46.0.5",
    "img2pdf>=0.6.3",
    "numpy>=2.0.2",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.19.0",
    "pypdf>=6.9.1",
    "pyperclip>=1.11.0",
    "pyqt5>=5.15.11",
    "pytube>=15.0.0",
    "pywin32>=311 ; sys_platform == 'win32'",
    "requests>=2.32.5",
]
